# pymc-gpx

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pixi.toml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: release.yaml  test.yaml
src/gpx/: __init__.py
src/gpx/old/: __init__.py  cov.py  gp.py  hsgp_approx.py
tests/: test_gpx.py
tests/old/: test_cov.py  test_gp.py  test_hsgp_approx.py  test_mean.py  test_util.py
